# rcore-user

./: Makefile
rethink/c/: hello-c  hello-pic  hello-pic-static-c  hello-static-c  hello.c  test-args
rethink/cpp/: helloworld.cpp
rethink/rust/hello-rust/: Cargo.toml
rethink/workplace/c/: hello.c
rethink/workplace/cpp/: hello  hello-static-cpp
rust/: Cargo.toml
rust/src/: lang_items.rs  lib.rs  syscall.rs  thread.rs  ulib.rs
rust/targets/: riscv64-rcore.json
ucore/src/include/: syscall.h  ulib.h
ucore/src/lib/: syscall.c
