[package]
name = "rcore-user"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

[dependencies]
buddy_system_allocator = "0.8"
isomorphic_drivers = { git = "https://github.com/rcore-os/isomorphic_drivers", default-features = false, features = ["log"]}
smoltcp = { version = "0.7", default-features = false, features = ["alloc", "log", "ethernet", "proto-ipv4", "socket-tcp", "socket-raw"] }
treebitmap = { git = "https://github.com/jiegec/treebitmap" , features = ["alloc"] }
rlibc = "1.0"
spin = "0.9"
bitflags = "1.2.1"